[tool.poetry]
name = "tracerepo"
version = "0.0.7.post33.dev0+a180376"
description = "Fracture & lineament data management."
authors = ["nialov <nikolasovaskainen@gmail.com>"]
readme = "README.rst"
license = "MIT"
# Make sure hyphens/underscores are correct in urls
homepage = "https://github.com/nialov/tracerepo"
repository = "https://github.com/nialov/tracerepo"
documentation = "https://tracerepo.readthedocs.io/en/latest/"
# For inspiration: https://pydigger.com/keywords
keywords = [
    "data",
]
# See https://pypi.org/classifiers/
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3 :: Only"
]
include = ["CHANGELOG.md"]

[tool.poetry.scripts]
tracerepo = "tracerepo.cli:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "*"
pandera = "*"
# fractopo already locks dependencies of typer and rich
typer = "*"
rich = "*"
fractopo = ">=0.5.0"
pyproj = ">=3.1"
pydantic = ">=1.8.2"
json5 = ">=0.9.6"

[tool.poetry.dev-dependencies]
ipython = "*"
jupyterlab = "*"
nox = "*"
pre-commit = "*"
pytest = "*"
toml = "*"
hypothesis = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths =[
    "tests",
    "tracerepo",
    ]
addopts = "--doctest-modules"
doctest_optionflags =[
    "NUMBER",
    "NORMALIZE_WHITESPACE",
    ]

filterwarnings =[]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["tracerepo", "tests"]

[tool.pylint.master]
fail-under = "9.5"

[tool.pylint.report]
output-format = "text"

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",
    "C0302",
    "R0902",
    "R0913",
    "R0914",
    "R1735",
    "W0212",
    "W0621",
    "W0703",
    "W1203",
    ]
extension-pkg-whitelist = "pydantic"

[tool.pylint.similarities]
ignore-imports = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pyright]

reportPrivateImportUsage = false
